--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -6,7 +6,7 @@ nav.navbar.navbar-default
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand href="#" Task manager
+      a.navbar-brand href=root_path Task manager
 
     #navbar-collapse.collapse.navbar-collapse
       ul.nav.navbar-nav
