--- a/app/views/web/users/tasks/show.html.slim
+++ b/app/views/web/users/tasks/show.html.slim
@@ -18,4 +18,4 @@ h1 = "##{@task.id} | #{@task.name}"
 hr
 .row
   .col-md-12
-    = link_to "Edit task", edit_task_path(@task), class: 'btn btn-primary'
+    = link_to "Edit task", edit_users_task_path(@task), class: 'btn btn-primary'
